--- a/site/assets/css/GradientsStyle.css
+++ b/site/assets/css/GradientsStyle.css
@@ -1,42 +1,5 @@
-@font-face {
-  font-family: MinecraftRegular;
-  src: url(/fonts/MinecraftRegular.otf);
-}
-
-@font-face {
-  font-family: MinecraftBold;
-  src: url(/fonts/MinecraftBold.otf);
-}
-
-@font-face {
-  font-family: MinecraftItalic;
-  src: url(/fonts/MinecraftItalic.otf);
-}
-
-@font-face {
-  font-family: MinecraftBoldItalic;
-  src: url(/fonts/MinecraftBoldItalic.otf);
-}
-
-#content {
-  margin: 1em;
-}
-
-.row {
-  margin-top: 15px;
-  margin-bottom: 15px;
-}
-
-label {
-  margin-bottom: 0;
-}
-
-.form-control {
-  color: black;
-}
-
 #coloredNick {
-  font-size: 4rem;
+  font-size: 3rem;
   word-wrap: break-word;
 }
 
@@ -48,7 +11,6 @@ label {
 
 #title {
   position: relative;
-  font-family: MinecraftRegular;
   background: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
   -webkit-background-clip: text;
   background-clip: text;
@@ -58,30 +20,16 @@ label {
 }
 
 #outputText {
+  word-wrap: break-word;
   white-space: pre-wrap;
   cursor: pointer;
-  height: 95px;
+  width: 100px;
   font-family: MinecraftRegular;
-}
-
-#dbold,
-#ditalics,
-#dunderline,
-#dstrike {
-  font-family: MinecraftRegular;
-  color: lightgrey;
 }
 
 #error {
-  font-size: 20px;
-  font-family: MinecraftBoldItalic;
   color: red;
   display: none;
-  margin-bottom: 10px;
-}
-
-.minecraft {
-  font-family: MinecraftRegular;
 }
 
 .minecraftbold {
@@ -115,12 +63,6 @@ label {
   50% {
     background-position: 100% 19%;
   }
-}
-
-body {
-  background: rgb(49, 49, 49);
-  color: lightgray;
-  font-family: MinecraftRegular;
 }
 
 .hidden {
