switch notfound page to bulma

--- a/site/templates/notfound.ejs
+++ b/site/templates/notfound.ejs
@@ -1,11 +1,12 @@
 <%- include("partials/header", { path, title: "Animated Texture Creator"}) %>
 
-<div id="content">
-  <div class="container-fluid">
-    <div class="row" style="text-align: center;">
-      <h1 id="title">This page could not be found!</h1>
-      <p>Did you misspell the URL?</p>
+<section class="hero is-dark is-fullheight-with-navbar">
+  <div class="hero-body">
+    <div class="container has-text-centered">
+      <p class="title">This page could not be found!</p>
+      <p class="subtitle">Did you misspell the URL?</p>
     </div>
-</div>
+  </div>
+</section>
 
 <%- include("partials/footer") %>
