--- a/site/templates/partials/header.ejs
+++ b/site/templates/partials/header.ejs
@@ -11,9 +11,8 @@
   <title><%= title %></title>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <link rel="stylesheet" type="text/css" href="https://unpkg.com/bulma-prefers-dark">
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bulma-checkradio">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body class="has-navbar-fixed-top">
   <nav class="navbar is-dark is-fixed-top" role="navigation" aria-label="main navigation">
