--- a/site/templates/gradients.ejs
+++ b/site/templates/gradients.ejs
@@ -136,6 +136,7 @@
   </section>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jscolor/2.4.8/jscolor.min.js"></script>
+  <script src="/js/RGBScript.js"></script>
   <script src="/js/GradientScript.js"></script>
   <script>
     let qPreset = '<%- queryPreset %>';
