add cumulative button

--- a/site/templates/animtexture.ejs
+++ b/site/templates/animtexture.ejs
@@ -29,6 +29,9 @@
         <input id="tname" class="input" type="text"></input>
         <br>
         <br>
+        <label>Cumulative (check this if gif frames are broken):</label>
+        <input type="checkbox" id="cumulative">
+        <br>
         <button class="button is-black" onclick="generate();">Generate</button>
 
         </div>
