--- a/site/templates/animtexture.ejs
+++ b/site/templates/animtexture.ejs
@@ -20,13 +20,14 @@
           </label>
         </div>
 
-        <div id="imgs">
-        </div>
-        <div id="fps">
-        </div>
+        <br>
+
+        <div id="imgs" style="display: flex; flex-wrap: wrap; max-height: 620px; overflow: auto;"></div>
+
+        <br>
 
         <label for='tname'>Texture name</label>
-        <input id="tname" class="input" type="text"></input>
+        <input id="tname" class="input" type="text">
         <br>
         <br>
         <button class="button is-black" onclick="generate();">Generate</button>
