main pages for spark profile and timings and stuff

--- a/site/templates/notfound.ejs
+++ b/site/templates/notfound.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header", { path, title: "Animated Texture Creator"}) %>
+<%- include("partials/header", { path, title: "Page not found" }) %>
 
 <section class="hero is-dark is-fullheight-with-navbar">
   <div class="hero-body">
