--- a/site/templates/partials/header.ejs
+++ b/site/templates/partials/header.ejs
@@ -50,6 +50,19 @@
         <a class="navbar-item" href="/AnimTexture">
           Animated Texture
         </a>
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">
+            Analysis
+          </a>
+          <div class="navbar-dropdown">
+            <a class="navbar-item" href="/SparkProfile">
+              Spark Profile
+            </a>
+            <a class="navbar-item" href="/PaperTimings">
+              Paper Timings
+            </a>
+          </div>
+        </div>
         <a class="navbar-item">
           More Coming Soon
         </a>
