--- a/site/templates/gradients.ejs
+++ b/site/templates/gradients.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header", { queryPreset, path, title: "Hex Gradient Creator"}) %>
+<%- include("partials/header", { queryPreset, path, title: "Hex Gradient Creator" }) %>
   <link rel="stylesheet" href="/css/RGBStyle.css">
 
   <div id="hexColorTemplate" style="display:none;">
@@ -45,7 +45,7 @@
           <div class="tile is-parent">
             <div class="tile is-child">
               <label for='numOfColors'>Number of Colors</label>
-              <input type="number" id="numOfColors" class="input" type="text" min="2" max="10" value="2" oninput="toggleColors(this.value); updateOutputText(event);"></input>
+              <input type="number" id="numOfColors" class="input" type="text" min="2" max="10" value="2" oninput="toggleColors(this.value); updateOutputText(event);">
               <div id="hexColors" class="content"></div>
             </div>
           </div>
@@ -53,7 +53,7 @@
             <div class="tile is-child">
               <div class="content">
                 <label for='nickname'>Input Text</label>
-                <input id="nickname" class="input" type="text" placeholder="Your Text" value="SimplyMC" oninput="updateOutputText(event);"></input>
+                <input id="nickname" class="input" type="text" placeholder="Your Text" value="SimplyMC" oninput="updateOutputText(event);">
                 <label for='output-format'>Output Format</label><br>
                 <div class="select" style="width:100%">
                   <select style="width:100%" id="output-format" onchange="updateOutputText(event);">
@@ -70,7 +70,7 @@
                 </div>
                 <div class="hidden" id="customFormatWrapper">
                   <label for='customFormat'>Input Text</label>
-                  <input id="customFormat" class="input" type="text" oninput="updateOutputText(event);"></input>
+                  <input id="customFormat" class="input" type="text" oninput="updateOutputText(event);">
                   <p>Placeholders:</p>
                   <ul>
                     <li>$1 - First RR hex</li>
@@ -106,7 +106,7 @@
                 </button>
                 <div id="importInput" style="display: none;">
                   <label for='import'>Paste Here</label>
-                  <input id="import" name="ImportInput" class="input" type="text" onchange="javascript: importPreset(this.value)"></input>  
+                  <input id="import" name="ImportInput" class="input" type="text" onchange="javascript: importPreset(this.value)">  
                 </div>
                 <br><br>
                 <div id="formatSelector">
