--- a/site/templates/sparkprofile.ejs
+++ b/site/templates/sparkprofile.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header", { path, title: "Animated Texture Creator" }) %>
+<%- include("partials/header", { path, title: "Analyze Spark Profile" }) %>
 
 <section class="hero is-dark is-fullheight-with-navbar">
   <div class="hero-body">
