Add cookies yum

--- a/site/templates/partials/header.ejs
+++ b/site/templates/partials/header.ejs
@@ -13,6 +13,7 @@
   <link rel="stylesheet" type="text/css" href="https://unpkg.com/bulma-prefers-dark">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="/js/js.cookie.js"></script>
 </head>
 <body class="has-navbar-fixed-top">
   <nav class="navbar is-dark is-fixed-top" role="navigation" aria-label="main navigation">
