Full logo in navbar and dynamic navbar

--- a/site/templates/animtab.ejs
+++ b/site/templates/animtab.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header", { queryPreset, path, title: "Animated TAB" }) %>
+<%- include("partials/header", { queryPreset, path, title: "Animated TAB Creator" }) %>
   <link rel="stylesheet" href="/css/RGBStyle.css">
 
   <div id="hexColorTemplate" style="display:none;">
