--- a/site/templates/gradients.ejs
+++ b/site/templates/gradients.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header", { queryPreset, path, title: "Hex Gradients Creator" }) %>
+<%- include("partials/header", { queryPreset, path, title: "Hex Gradient Creator" }) %>
   <link rel="stylesheet" href="/css/RGBStyle.css">
 
   <div id="hexColorTemplate" style="display:none;">
