--- a/site/templates/partials/header.ejs
+++ b/site/templates/partials/header.ejs
@@ -40,7 +40,7 @@
             Gradients
           </a>
           <div class="navbar-dropdown">
-            <a class="navbar-item <% if (title == 'Hex Gradients Creator') { %> is-active <% } %>" href="/Gradients">
+            <a class="navbar-item <% if (title == 'Hex Gradient Creator') { %> is-active <% } %>" href="/Gradients">
               Hex Gradients
             </a>
             <a class="navbar-item <% if (title == 'Animated TAB Creator') { %> is-active <% } %>" href="/AnimTab">
