--- a/site/templates/animtab.ejs
+++ b/site/templates/animtab.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header", { queryPreset, path, title: "Animated TAB Creator" }) %>
+<%- include("partials/header", { queryPreset, path, title: "Animated TAB Creator", description: "TAB plugin gradient animation creator" }) %>
   <link rel="stylesheet" href="/css/RGBStyle.css">
 
   <div id="hexColorTemplate" style="display:none;">
@@ -17,7 +17,7 @@
           Animated TAB
         </p>
         <p class="subtitle">
-          TAB plugin gradient animations
+          TAB plugin gradient animation creator
         </p>
         <br>
         <div class="tile is-ancestor">
