--- a/site/templates/animtexture.ejs
+++ b/site/templates/animtexture.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header", { path, title: "Animated Texture Creator" }) %>
+<%- include("partials/header", { path, title: "Animated Texture Creator", description: "Easily merge textures for resource pack animations" }) %>
 <link rel="stylesheet" href="/css/AnimTexture.css">
 
 <section class="hero is-dark is-fullheight-with-navbar">
