--- a/site/templates/papertimings.ejs
+++ b/site/templates/papertimings.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header", { path, title: "Analyze Timings" }) %>
+<%- include("partials/header", { path, title: "Analyze Timings", description: "Paper Timings Analysis Page" }) %>
 
 <section class="hero is-dark is-fullheight-with-navbar">
   <div class="hero-body">
