--- a/site/templates/partials/header.ejs
+++ b/site/templates/partials/header.ejs
@@ -3,8 +3,8 @@
 <head>
   <title><%= title %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta content="SimplyMC" property="og:title" />
-  <meta content="Minecraft multitool for everyone" property="og:description" />
+  <meta content="SimplyMC: <%= title %>" property="og:title" />
+  <meta content="<%= description %>" property="og:description" />
   <meta content="https://www.simplymc.art/" property="og:url" />
   <meta content="/images/icon.png" property="og:image" />
   <meta content="#9C0000" data-react-helmet="true" name="theme-color" />
