--- a/site/templates/notfound.ejs
+++ b/site/templates/notfound.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header", { path, title: "Page not found" }) %>
+<%- include("partials/header", { path, title: "Page not found", description: "Bruh why are you sending this as a link lmfao" }) %>
 
 <section class="hero is-dark is-fullheight-with-navbar">
   <div class="hero-body">
