--- a/site/templates/timings-result.ejs
+++ b/site/templates/timings-result.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header", { path, title: "Analyze Spark Profile Result" }) %>
+<%- include("partials/header", { path, title: "Analyze Spark Profile Result", description: "Paper Timings Analysis Page" }) %>
 
 <section class="hero is-dark is-fullheight-with-navbar">
   <div class="hero-body">
