show amount of recommendations in description

--- a/site/templates/partials/header.ejs
+++ b/site/templates/partials/header.ejs
@@ -53,10 +53,10 @@
             Analysis
           </a>
           <div class="navbar-dropdown">
-            <a class="navbar-item <% if (title == 'Analyze Spark Profile') { %> is-active <% } %>" href="/SparkProfile">
+            <a class="navbar-item <% if (title == 'Analyze Spark Profile' || title == 'Profile Analysis Result') { %> is-active <% } %>" href="/SparkProfile">
               Spark Profile
             </a>
-            <a class="navbar-item <% if (title == 'Analyze Timings') { %> is-active <% } %>" href="/PaperTimings">
+            <a class="navbar-item <% if (title == 'Analyze Timings' || title == 'Timings Analysis Result') { %> is-active <% } %>" href="/PaperTimings">
               Paper Timings
             </a>
           </div>
