--- a/site/templates/sparkprofile.ejs
+++ b/site/templates/sparkprofile.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header", { path, title: "Analyze Spark Profile", description: "Spark Profile Analysis Page" }) %>
+<%- include("partials/header", { path, title: "Analyze Spark Profile", description: "Analyze your Spark Profiles to get optimization recommendations" }) %>
 
 <section class="hero is-dark is-fullheight-with-navbar">
   <div class="hero-body">
