a bunch of refactoring and stuff

--- a/site/templates/partials/header.ejs
+++ b/site/templates/partials/header.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title><%= title %></title>
+  <title>SimplyMC: <%= title %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta content="SimplyMC: <%= title %>" property="og:title" />
   <meta content="<%= description %>" property="og:description" />
